--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div>
 
                     <p class="testimonial-text">
-                        “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ” Tanya Sinclair UX Engineer “
+                        “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ” <span>Tanya Sinclair UX Engineer “</span>
                         <!--If you want to lay the best foundation
                         possible I’d recommend taking this course. The depth the instructors go into is incredible. I now feel so confident about starting up as a professional developer. ” John Tarkpor Junior Front-end Developer -->
                     </p>
