--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <img class="testimonial-img" src="images/image-tanya.jpg" width="200px" alt="tanya">
 
                 </div>
-                <div>
+                <div class="testimonial-text-content">
 
                     <p class="testimonial-text">
-                        “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ” <span>Tanya Sinclair UX Engineer “</span>
+                        “ I’ve been interested in coding for a while but never taken the jump, until now. I couldn’t recommend this course enough. I’m now in the job of my dreams and so excited about the future. ” <span>Tanya Sinclair</span> <span>UX Engineer </span>
                         <!--If you want to lay the best foundation
                         possible I’d recommend taking this course. The depth the instructors go into is incredible. I now feel so confident about starting up as a professional developer. ” John Tarkpor Junior Front-end Developer -->
                     </p>
@@ -36,10 +36,15 @@
 
         </article>
     </main>
-
+    <!-- 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
+    <footer class="footer">
+        <div class="wave">
+
+        </div>
+    </footer>
 </body>
 
 </html>
