--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <div class="center">
         <main class="testimonial">
-            <input type="radio" value="slide-1" name=" next " id="slider-1" checked>
-            <input type="radio" value="slide-1" name=" next " id="slider-1" checked>
+            <input type="radio" value="slide-1" name=" slider " id="slider-1" checked>
+            <input type="radio" value="slide-2" name=" slider " id="slider-2" checked>
 
             <section class="testimonial-content slide-1">
                 <!-- <label for="slide-1"> -->
@@ -28,10 +28,15 @@
                     <img class="testimonial-img" src="images/image-tanya.jpg" width="200px" alt="tanya">
                     <button class="button">
                         <div class="antes">
-                            <label for="slider-1"></label>
+                            <label for="slider-1">
+                                <img src="images/icon-prev.svg" alt="next" width="10px">
+                            </label>
                         </div>
                         <div class="siguente">
-                            <label for="slider-2"></label>
+                            <label for="slider-2">
+                                <img src="images/icon-next.svg" alt="next" width="10px">
+
+                            </label>
                         </div>
                     </button>
 
